# bunnify

./: .gitignore  AGENTS.md  CHROME_SETUP.md  CONTRIBUTING.md  GITHUB_SETUP.md  GRAPHITE.md  LOGGING_IMPLEMENTATION.md  README.md  READY_FOR_GITHUB.md  SETUP_COMPLETE.md  bunnify-server  bunnify.json  bunnify.json.example  manage.py  pr_description.md  pyproject.toml  test_integration
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: bunnify.yml  ci.yml
bookmarks/: models.py  tests.py  urls.py  views.py
bookmarks/management/commands/: check_database.py  load_bookmarks.py  watch_bookmarks.py
bookmarks/migrations/: 0001_initial.py  0002_bookmark_defaults.py
bookmarks/templates/bookmarks/: index.html
bunnify/: asgi.py  settings.py  urls.py  wsgi.py
docs/: SYSTEMD.md
etc/systemd/: bunnify.service
scripts/: checks  on-deploy  setup-service
scripts/dev/: start-development  start_development
scripts/systemd/: bunnify.service
