[project]
name = "bunnify"
version = "0.1.1"
description = "Smart bookmark manager and URL shortcut system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "click==8.3.3",
    "django>=6.0.4",
    "isort>=8.0.1",
    "jsonschema>=4.26.0",
    "packaging==26.1",
    "pathspec==1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pyright>=1.1.409",
    "black>=26.3.1",
]

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "migrations"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
exclude = ["**/migrations", "**/.venv", "**/venv"]
# Django has dynamic attributes and patterns that don't match strict typing
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
reportArgumentType = "none"  # Django HttpResponse accepts str, pyright thinks bytes
